# gtranslate-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/translator/: mod.rs
