[package]
name = "gtranslate"
description = "Rust bindings for Google Translations"
version = "0.1.2"
edition = "2021"
keywords = ["google", "translations", "translator", "bindings"]
repository = "https://github.com/Z3NTL3/gtranslate-rs"
license-file = "LICENSE"

[dependencies]
reqwest = "0.12.12"
serde = "1.0.218"
serde_json = "1.0.140"
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
